lexer/src/snapshots/dreamberd_interpreter__lexer__tests__edge_cases-12.snap
---
source: src/lexer.rs
expression: "scan_one(\"[{]}\")"
---
Ok(
    [
        OpenBracket,
        Litteral(
            "{",
        ),
        CloseBracket,
        Litteral(
            "}",
        ),
    ],
)
