lexer/src/snapshots/dreamberd_interpreter__lexer__tests__edge_cases-3.snap
---
source: src/lexer.rs
expression: "scan_one(\"\\t\\t\\t\")"
---
Ok(
    [
        Litteral(
            "\t\t\t",
        ),
    ],
)
