lexer/src/snapshots/dreamberd_interpreter__lexer__tests__edge_cases-5.snap
---
source: src/lexer.rs
expression: "scan_one(\"@#$%^&*()\")"
---
Ok(
    [
        Litteral(
            "@#$%^&",
        ),
        Multiply,
        OpenParenthesis,
        CloseParenthesis,
    ],
)
