lexer/src/snapshots/dreamberd_interpreter__lexer__tests__mixed_tokens-2.snap
---
source: src/lexer.rs
expression: "scan_one(\"const x = 10 + 20!\")"
---
Ok(
    [
        Litteral(
            "const",
        ),
        Space,
        Litteral(
            "x",
        ),
        Space,
        Equal,
        Space,
        Numeric(
            [
                1,
                0,
            ],
        ),
        Space,
        Plus,
        Space,
        Numeric(
            [
                2,
                0,
            ],
        ),
        Bang,
    ],
)
