lexer/src/snapshots/dreamberd_interpreter__lexer__tests__single_character_tokens-6.snap
---
source: src/lexer.rs
expression: "scan_one(\"]\")"
---
Ok(
    [
        CloseBracket,
    ],
)
